--- a/main.ipynb
+++ b/main.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Mobile Price Classification"
+    "# Mobile Price Classification FInal Project"
    ]
   },
   {
@@ -1544,7 +1544,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1560,7 +1560,6 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "467fbb6e46000b649953d68edbcbecbb25bdbe4292d8883af0a541cadcd14566"
