--- a/main.ipynb
+++ b/main.ipynb
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -647,8 +647,9 @@
        "[8 rows x 21 columns]"
       ]
      },
+     "execution_count": 5,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -657,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +743,7 @@
        "<AxesSubplot:xlabel='three_g', ylabel='count'>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -763,7 +764,7 @@
     "fig, axs = plt.subplots(ncols=3, figsize=(20,10))\n",
     "sns.countplot(x='fc', data=df, ax=axs[0])\n",
     "sns.countplot(x='px_height', data=df, ax=axs[1])\n",
-    "sns.countplot(x='three_g', data=df, ax=axs[2])\n"
+    "sns.countplot(x='three_g', data=df, ax=axs[2])"
    ]
   },
   {
@@ -775,8 +776,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Correlation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +793,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -809,42 +817,193 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "price_range      1.000000\n",
-       "ram              0.917046\n",
-       "battery_power    0.200723\n",
-       "px_width         0.165818\n",
-       "px_height        0.148858\n",
-       "int_memory       0.044435\n",
-       "sc_w             0.038711\n",
-       "pc               0.033599\n",
-       "touch_screen     0.030411\n",
-       "mobile_wt        0.030302\n",
-       "three_g          0.023611\n",
-       "sc_h             0.022986\n",
-       "fc               0.021998\n",
-       "talk_time        0.021859\n",
-       "blue             0.020573\n",
-       "wifi             0.018785\n",
-       "dual_sim         0.017444\n",
-       "four_g           0.014772\n",
-       "clock_speed      0.006606\n",
-       "n_cores          0.004399\n",
-       "m_dep            0.000853\n",
+       "ram              0.917009\n",
+       "battery_power    0.200763\n",
+       "px_width         0.165132\n",
+       "px_height        0.144277\n",
+       "int_memory       0.043458\n",
+       "sc_w             0.038076\n",
+       "touch_screen     0.033888\n",
+       "pc               0.033871\n",
+       "mobile_wt        0.031628\n",
+       "sc_h             0.025641\n",
        "Name: price_range, dtype: float64"
       ]
      },
+     "execution_count": 10,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "abs(df.corr()['price_range']).sort_values(ascending=False)"
+    "abs(df.corr()['price_range']).sort_values(ascending=False)[0:11]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Dari visualisasi diatas dapat disimpulkan bahwa hanya terdapat 1 kolom yang memiliki korelasi kuat dengan label (lebih dari 0.8).\n",
+    "- Pada pengujian ini akan dilakukan dengan 2 dataset yaitu dataset dengan semua kolom dan dataset dengan 10 kolom (50%) dengan korelasi terbaik."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>battery_power</th>\n",
+       "      <th>fc</th>\n",
+       "      <th>int_memory</th>\n",
+       "      <th>mobile_wt</th>\n",
+       "      <th>pc</th>\n",
+       "      <th>px_height</th>\n",
+       "      <th>px_width</th>\n",
+       "      <th>ram</th>\n",
+       "      <th>three_g</th>\n",
+       "      <th>sc_w</th>\n",
+       "      <th>price_range</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>842</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>188</td>\n",
+       "      <td>2</td>\n",
+       "      <td>20</td>\n",
+       "      <td>756</td>\n",
+       "      <td>2549</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1021</td>\n",
+       "      <td>0</td>\n",
+       "      <td>53</td>\n",
+       "      <td>136</td>\n",
+       "      <td>6</td>\n",
+       "      <td>905</td>\n",
+       "      <td>1988</td>\n",
+       "      <td>2631</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>563</td>\n",
+       "      <td>2</td>\n",
+       "      <td>41</td>\n",
+       "      <td>145</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1263</td>\n",
+       "      <td>1716</td>\n",
+       "      <td>2603</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>615</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>131</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1216</td>\n",
+       "      <td>1786</td>\n",
+       "      <td>2769</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1821</td>\n",
+       "      <td>13</td>\n",
+       "      <td>44</td>\n",
+       "      <td>141</td>\n",
+       "      <td>14</td>\n",
+       "      <td>1208</td>\n",
+       "      <td>1212</td>\n",
+       "      <td>1411</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   battery_power  fc  int_memory  mobile_wt  pc  px_height  px_width   ram  \\\n",
+       "0            842   1           7        188   2         20       756  2549   \n",
+       "1           1021   0          53        136   6        905      1988  2631   \n",
+       "2            563   2          41        145   6       1263      1716  2603   \n",
+       "3            615   0          10        131   9       1216      1786  2769   \n",
+       "4           1821  13          44        141  14       1208      1212  1411   \n",
+       "\n",
+       "   three_g  sc_w  price_range  \n",
+       "0        0     7            1  \n",
+       "1        1     3            2  \n",
+       "2        1     2            2  \n",
+       "3        1     8            2  \n",
+       "4        1     2            1  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Make new dataset with only high correlation features\n",
+    "dfFiltered = df[['battery_power', 'fc', 'int_memory', 'mobile_wt', 'pc', 'px_height', 'px_width', 'ram', 'three_g', 'sc_w', 'price_range']]\n",
+    "dfFiltered.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export dataset to csv\n",
+    "dfFiltered.to_csv('filtered.csv', index=False)\n",
+    "df.to_csv('original.csv', index=False)"
    ]
   }
  ],
