--- a/main.ipynb
+++ b/main.ipynb
@@ -58,8 +58,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import scipy.stats as stats"
+    "import seaborn as sns"
    ]
   },
   {
