add time and desc

--- a/Model/original_model.ipynb
+++ b/Model/original_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,12 +14,13 @@
     "from sklearn.svm import SVC\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix"
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -217,13 +218,13 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('original.csv')\n",
+    "df = pd.read_csv('../original.csv')\n",
     "df.head()"
    ]
   },
@@ -236,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,23 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# For original model\n",
-    "MODEL = []\n",
-    "TEST = []\n",
-    "TRAIN = []\n",
-    "def eval(model,test,train):\n",
-    "    MODEL.append(model)\n",
-    "    TEST.append(round(test,2))\n",
-    "    TRAIN.append(round(train,2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +270,7 @@
        "((1386, 20), (594, 20), (1386,), (594,))"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,6 +283,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Array and function to store the models\n",
+    "MODEL = []\n",
+    "TEST = []\n",
+    "TRAIN = []\n",
+    "def eval(model,test,train):\n",
+    "    MODEL.append(model)\n",
+    "    TEST.append(round(test,2))\n",
+    "    TRAIN.append(round(train,2))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -306,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -315,25 +316,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 5 folds for each of 900 candidates, totalling 4500 fits\n"
+      "Fitting 5 folds for each of 900 candidates, totalling 4500 fits\n",
+      "Time Elapsed:  9.43\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "({'max_depth': 8, 'min_samples_leaf': 9, 'min_samples_split': 8},\n",
-       " 0.8355011297820949)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
+    "start = time.time()\n",
     "grid =  GridSearchCV(DecisionTreeClassifier(), dtParams, cv=5, verbose = 1, n_jobs = -1, scoring='accuracy')\n",
     "grid.fit(x_train, y_train)\n",
-    "grid.best_params_, grid.best_score_"
+    "end = time.time()\n",
+    "print('Best Parameter', grid.best_params_)\n",
+    "print('Best Score', grid.best_score_)\n",
+    "print('Time Elapsed: ', round(end - start,2))"
    ]
   },
   {
@@ -356,6 +351,7 @@
     }
    ],
    "source": [
+    "# Train the model with the best parameters\n",
     "dtBest = grid.best_estimator_\n",
     "dtBest.fit(x_train, y_train)"
    ]
@@ -435,6 +431,7 @@
     }
    ],
    "source": [
+    "# Predict on test data\n",
     "y_dt = dtBest.predict(x_test)\n",
     "pd.DataFrame(np.c_[y_test, y_dt], columns=['Actual', 'Predicted']).head()"
    ]
@@ -477,6 +474,7 @@
     }
    ],
    "source": [
+    "# Accuracy of the model\n",
     "dtTrain = dtBest.score(x_train, y_train)*100\n",
     "dtTest = dtBest.score(x_test, y_test)*100\n",
     "dtCon = confusion_matrix(y_test, y_dt)\n",
@@ -495,32 +493,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 5 folds for each of 900 candidates, totalling 4500 fits\n"
+      "Fitting 5 folds for each of 900 candidates, totalling 4500 fits\n",
+      "Best Parameter {'max_depth': 10, 'min_samples_split': 2, 'n_estimators': 80}\n",
+      "Best Score 0.8672441108485053\n",
+      "Time Elapsed:  145.34\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "({'max_depth': 9, 'min_samples_split': 9, 'n_estimators': 100},\n",
-       " 0.8658000675272056)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
+    "start = time.time()\n",
     "grid =  GridSearchCV(RandomForestClassifier(), rfParams, cv=5, verbose = 1, n_jobs = -1, scoring='accuracy')\n",
     "grid.fit(x_train, y_train)\n",
-    "grid.best_params_, grid.best_score_"
+    "end = time.time()\n",
+    "print('Best Parameter', grid.best_params_)\n",
+    "print('Best Score', grid.best_score_)\n",
+    "print('Time Elapsed: ', round(end - start,2))"
    ]
   },
   {
@@ -543,6 +537,7 @@
     }
    ],
    "source": [
+    "# Train the model with the best parameters\n",
     "rfBest = grid.best_estimator_\n",
     "rfBest.fit(x_train, y_train)"
    ]
@@ -622,6 +617,7 @@
     }
    ],
    "source": [
+    "# Predict on test data\n",
     "y_rf = rfBest.predict(x_test)\n",
     "pd.DataFrame(np.c_[y_test, y_rf], columns=['Actual', 'Predicted']).head()"
    ]
@@ -662,6 +658,7 @@
     }
    ],
    "source": [
+    "# Accuracy of the model\n",
     "rfTrain = rfBest.score(x_train, y_train)*100\n",
     "rfTest = rfBest.score(x_test, y_test)*100\n",
     "rfCon = confusion_matrix(y_test, y_rf)\n",
@@ -680,31 +677,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n"
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Best Parameter {'C': 0.1, 'gamma': 0.1, 'kernel': 'linear'}\n",
+      "Best Score 0.969698465054671\n",
+      "Time Elapsed:  7.53\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "({'C': 0.1, 'gamma': 0.1, 'kernel': 'linear'}, 0.969698465054671)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
+    "start = time.time()\n",
     "grid =  GridSearchCV(SVC(), svmParams, cv=5, verbose = 1, n_jobs = -1, scoring='accuracy')\n",
     "grid.fit(x_train, y_train)\n",
-    "grid.best_params_, grid.best_score_"
+    "end = time.time()\n",
+    "print('Best Parameter', grid.best_params_)\n",
+    "print('Best Score', grid.best_score_)\n",
+    "print('Time Elapsed: ', round(end - start,2))"
    ]
   },
   {
@@ -727,6 +721,7 @@
     }
    ],
    "source": [
+    "# Accuracy of the model\n",
     "svmBest = grid.best_estimator_\n",
     "svmBest.fit(x_train, y_train)"
    ]
@@ -806,6 +801,7 @@
     }
    ],
    "source": [
+    "# Predict on test data\n",
     "y_svm = svmBest.predict(x_test)\n",
     "pd.DataFrame(np.c_[y_test, y_svm], columns=['Actual', 'Predicted']).head()"
    ]
@@ -846,6 +842,7 @@
     }
    ],
    "source": [
+    "# Accuracy of the model\n",
     "svmTrain = svmBest.score(x_train, y_train)*100\n",
     "svmTest = svmBest.score(x_test, y_test)*100\n",
     "svmCon = confusion_matrix(y_test, y_svm)\n",
@@ -929,6 +926,7 @@
     }
    ],
    "source": [
+    "# Evaluate the models\n",
     "result = pd.DataFrame({'Model': MODEL, 'Test Accuracy': TEST, 'Train Accuracy': TRAIN})\n",
     "result.sort_values(by='Test Accuracy', ascending=False)"
    ]
