--- a/models.ipynb
+++ b/models.ipynb
@@ -379,6 +379,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- Perbandingan yang akan digunakan untuk data train dan data test adalah 70 : 30\n",
+    "- Algoritma yang digunakan adalah Decision Tree, Random Forest, dan Support Vector Machine\n",
+    "- Semua algoritma tersebut juga akan menggunakan Hyper Parameter Tuning\n",
+    "- Lalu tiap model akan dibandingan akurasinya"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Hyperparameter Variables"
    ]
   },
@@ -398,6 +408,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Original Dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -411,13 +428,6 @@
     "    MODEL.append(model)\n",
     "    TEST.append(round(test,2))\n",
     "    TRAIN.append(round(train,2))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Original Dataset"
    ]
   },
   {
@@ -448,7 +458,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Decission Tree"
+    "### Decision Tree"
    ]
   },
   {
@@ -1004,7 +1014,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Best Method (Original)"
+    "### Best Models (Original)"
    ]
   },
   {
@@ -1083,6 +1093,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Pada dataset dengan full fitur, model yang memiliki akurasi terbaik adalah Support Vector Machine."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Filtered Dataset"
    ]
   },
@@ -1130,7 +1147,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Decission Tree"
+    "### Decision Tree"
    ]
   },
   {
@@ -1682,7 +1699,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Best Method (Filtered)"
+    "### Best Models (Filtered)"
    ]
   },
   {
@@ -1755,6 +1772,13 @@
     "# Evaluate the models\n",
     "result2 = pd.DataFrame({'Model': MODEL, 'Test Accuracy': TEST, 'Train Accuracy': TRAIN})\n",
     "result2.sort_values(by='Test Accuracy', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pada half features dataset, model yang memiliki akurasi terbaik adalah Support Vector Machine"
    ]
   },
   {
@@ -1866,6 +1890,14 @@
     "print('Full Feature & Half Feature Accuracy')\n",
     "print('=======================================')\n",
     "result.sort_values(by='Test Accuracy', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Dari hasil evaluasi tersebut dapat disimpulkan SVM memiliki akurasi terbaik pada dataset full dan juga half features.\n",
+    "- Random Forest dan Decision Tree memiliki akurasi yang lebih rendah dari SVM dan juga terjadi overfitting."
    ]
   }
  ],
