rerun models train

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Mobile Price Classification FInal Project"
+    "# Mobile Price Classification - Zenius Final Project"
    ]
   },
   {
@@ -1186,6 +1186,13 @@
     "fig = plt.figure()\n",
     "ax = sns.scatterplot(data=dfClean, x='fc', y='pc', hue='price_range')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pada semua kategori harga mobile phone, semakin banyak pixel dari kamera utama maka semakin banyak juga pixel dari kamera depan mobile phone tersebut. Namun pada semua kategori harga tersebar secara merata"
    ]
   },
   {
