add more description

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -1143,15 +1143,12 @@
    ],
    "source": [
     "fig, axs = plt.subplots(2, figsize=(12, 12))\n",
-    "fig.suptitle(\n",
-    "    'Scatterplot Kapasitas Baterai terhadap Tinggi Resolusi Pixel dan Berat Handphone')\n",
+    "fig.suptitle('Scatterplot Kapasitas Baterai terhadap Tinggi Resolusi Pixel dan Berat Handphone')\n",
     "fig = plt.figure()\n",
-    "a = sns.scatterplot(data=dfClean, x='battery_power',\n",
-    "                    y='px_height', hue='price_range', ax=axs[0])\n",
+    "a = sns.scatterplot(data=dfClean, x='battery_power', y='px_height', hue='price_range', ax=axs[0])\n",
     "a.set_xlabel(\"Kapasitas Baterai\")\n",
     "a.set_ylabel(\"Tinggi Resolusi Pixel\")\n",
-    "b = sns.scatterplot(data=dfClean, x='battery_power',\n",
-    "                    y='mobile_wt', hue='price_range', ax=axs[1])\n",
+    "b = sns.scatterplot(data=dfClean, x='battery_power', y='mobile_wt', hue='price_range', ax=axs[1])\n",
     "b.set_xlabel(\"Kapasitas Baterai\")\n",
     "b.set_ylabel(\"Berat Handphone\")\n",
     "plt.show()"
@@ -1216,7 +1213,14 @@
    "source": [
     "fig = plt.figure()\n",
     "ax = sns.scatterplot(data=dfClean, y='clock_speed', x='n_cores')\n",
-    "plt.show()\n"
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "persebaran data `n_cores` dan `clock_speed` terlihat merata"
    ]
   },
   {
@@ -1250,6 +1254,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Semakin tinggi harga mobile phone, semakin tinggi juga rata-rata kasitas ram\n",
+    "- ini juga menunjukkan bahwa fitur `ram` memiliki keterkaitan yang bagus dengan label `price_range`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
@@ -1269,14 +1281,22 @@
     "plt.figure(num=None, figsize=(9, 5), dpi=80, facecolor='w', edgecolor='k')\n",
     "dfClean.groupby(['price_range'])['battery_power'].mean().plot(kind='bar')\n",
     "plt.title('Rata-Rata Kapasitas Baterai per Price Range')\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Correlation"
+    "- tiap rentang harga rata-rata kapasitas baterai tidak memiliki kenaikan yang signifikan\n",
+    "- ini juga menunjukkan bahwa fitur `battery_power` memiliki keterkaitan yang kurang bagus dengan label `price_range`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Features Correlation"
    ]
   },
   {
@@ -1501,6 +1521,20 @@
     "# Export dataset to csv\n",
     "dfFiltered.to_csv('filtered.csv', index=False)\n",
     "dfClean.to_csv('original.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "dataset dengan semua fitur dinamakan `original.csv` dan dataset dengan setengah fitur dinamakan `filtered.csv`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "machine learning modelling akan dilakukan pada `models.ipynb`"
    ]
   }
  ],
